[gd_scene load_steps=4 format=3 uid="uid://wny822vco115"]

[ext_resource type="Script" uid="uid://ch70fr7p1ubkn" path="res://src/scripts/main.gd" id="1_ig7tw"]
[ext_resource type="Theme" uid="uid://icficvua5gwt" path="res://primary_ui_theme.tres" id="2_rr2wm"]

[sub_resource type="Theme" id="Theme_7dm0k"]

[node name="GameUI_Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_7dm0k")
script = ExtResource("1_ig7tw")

[node name="TopMenu_PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_right = 500.0
offset_bottom = 40.0

[node name="MarginContainer" type="MarginContainer" parent="TopMenu_PanelContainer"]
layout_mode = 2
theme = ExtResource("2_rr2wm")

[node name="HBoxContainer" type="HBoxContainer" parent="TopMenu_PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 290

[node name="MainMenu_Button" type="Button" parent="TopMenu_PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Main Menu"

[node name="Label" type="Label" parent="TopMenu_PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "ASCII FARMER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameWindow_ScrollContainer" type="ScrollContainer" parent="."]
custom_minimum_size = Vector2(500, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 40.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="GameWindow_ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("2_rr2wm")

[node name="VBoxContainer" type="VBoxContainer" parent="GameWindow_ScrollContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme = ExtResource("2_rr2wm")

[node name="MainMenu_PanelContainer" type="PanelContainer" parent="."]
visible = false
z_index = 2
custom_minimum_size = Vector2(200, 0)
layout_mode = 0
offset_top = 42.0
offset_right = 200.0
offset_bottom = 205.0

[node name="MarginContainer" type="MarginContainer" parent="MainMenu_PanelContainer"]
layout_mode = 2
theme = ExtResource("2_rr2wm")

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu_PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 2

[node name="NewGame_Button" type="Button" parent="MainMenu_PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
action_mode = 0
text = "New Game"
alignment = 0

[node name="SaveGame_Button" type="Button" parent="MainMenu_PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
text = "Save Game"
alignment = 0

[node name="LoadGame_Button" type="Button" parent="MainMenu_PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
text = "Load Game"
alignment = 0

[node name="Help_Button" type="Button" parent="MainMenu_PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
text = "Help"
alignment = 0

[node name="Settings_Button" type="Button" parent="MainMenu_PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
text = "Settings"
alignment = 0

[node name="Exit_Button" type="Button" parent="MainMenu_PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
text = "Exit"
alignment = 0
